@@ -1,6 +1,12 @@
 <?xml version='1.0'?>
 <options>
-  <section name='XSettings' title='XSettings'>
+  <section title='Window manager'>
+    <label>The window manager is a program which puts title bars and frames on windows. It allows you to move windows around, resize them, close them and so on.</label>
+    <wm-combo name='DefaultWM' label='Default window manager'/>
+    <spacer/>
+    <start-wm/>
+  </section>
+  <section title='XSettings'>
     <label>These settings affect all XSettings-aware programs immediately.
 Older programs will not be affected.</label>
     <spacer/>
@@ -10,7 +16,6 @@ Older programs will not be affected.</label>
 	    min='100' max='2000' showvalue='1'>Time allowed between the two clicks that make up a double click. Make this bigger if you have trouble double-clicking fast enough; set it smaller if two single-clicks sometimes get treated as a double click.
     </slider>
     <toggle name='Gtk/CanChangeAccels'
-    	    label='Allow keybindings to be changed from menus'>When this is on,
-you can set up a short-cut for a menu item by holding to pointer over the menu item and pressing the key. If off, short-cuts cannot be changed.</toggle>
+    	    label='Allow keybindings to be changed from menus'>When this is on, you can set up a short-cut for a menu item by holding to pointer over the menu item and pressing the key. If off, short-cuts cannot be changed.</toggle>
   </section>
 </options>
