@@ -33,25 +33,18 @@
 #include "main.h"
 #include "wm.h"
 #include "choices.h"
-
-/* List of commands to start window managers.
- * If the first entry is blank or doesn't work then the user is asked
- * to choose from the list.
- * Loaded from <Choices>/ROX-Session/WindowMans.
- */
-static GList	*wms = NULL;
-
-static GtkWidget	*choice_box = NULL;
+#include "options.h"
+#include "gui_support.h"
 
 pid_t	wm_pid = -1;
 
-static guchar *wm_command = NULL;
+static Option o_default_wm;
 
 /* Static prototypes */
-static void load_wm_list(void);
-static void choose_wm(void);
-static gint ok_clicked(GtkWidget *button, GtkEditable *entry);
-static void run_wm(guchar *command);
+static GList *load_wm_list(void);
+static void run_wm(void);
+static GList *start_wm_button(Option *option, xmlNode *node, guchar *label);
+static GList *wm_combo(Option *option, xmlNode *node, guchar *label);
 
 /****************************************************************
  *			EXTERNAL INTERFACE			*
@@ -61,198 +54,171 @@ static void run_wm(guchar *command);
 
 void start_window_manager(void)
 {
-	guchar 	*path;
-
-	path = choices_find_path_load("DefaultWM", "ROX-Session");
-
-	if (path)
-	{
-		FILE   *file;
-		guchar buffer[BUFFER_SIZE];
-
-		file = fopen(path, "rb");
-		g_free(path);
+	option_register_widget("start-wm", start_wm_button);
+	option_register_widget("wm-combo", wm_combo);
 		
-		if (fgets(buffer, BUFFER_SIZE, file))
-		{
-			g_strstrip(buffer);
-			run_wm(buffer);
-			return;
-		}
-	}
+	option_add_string(&o_default_wm, "DefaultWM", "");
 
-	choose_wm();
+	run_wm();
 }
 
 void wm_process_died(void)
 {
 	wm_pid = -1;
 
-	choose_wm();
+	report_error(_("Your chosen window manager ('%s') crashed (or quit). "
+		       "Please restart it, or choose another window manager."),
+			o_default_wm.value);
+	options_show();
 }
 
 /****************************************************************
  *			INTERNAL FUNCTIONS			*
  ****************************************************************/
 
-static void choose_wm(void)
+static GList *load_wm_list(void)
 {
-	GtkWidget	*vbox, *combo, *hbox, *button;
-	
-	if (wms)
-	{
-		GList *next;
-
-		for (next = wms; next; next = next->next)
-			g_free(next->data);
-		g_list_free(wms);
-		wms = NULL;
-	}
-	
-	load_wm_list();
-
-	if (choice_box)
-		gtk_widget_destroy(choice_box);
-
-	choice_box = gtk_window_new(GTK_WINDOW_TOPLEVEL);	/* XXX */
-	gtk_container_set_border_width(GTK_CONTAINER(choice_box), 10);
-	gtk_window_set_position(GTK_WINDOW(choice_box), GTK_WIN_POS_CENTER);
-
-	vbox = gtk_vbox_new(FALSE, 10);
-	gtk_container_add(GTK_CONTAINER(choice_box), vbox);
-	
-	gtk_box_pack_start(GTK_BOX(vbox),
-			gtk_label_new("Choose a window manager:"),
-			TRUE, TRUE, 0);
-
-	combo = gtk_combo_new();
-	gtk_combo_disable_activate(GTK_COMBO(combo));
-	gtk_box_pack_start(GTK_BOX(vbox), combo, FALSE, TRUE, 0);
-	GTK_WIDGET_SET_FLAGS(combo, GTK_CAN_FOCUS);
-	gtk_signal_connect(GTK_OBJECT(GTK_COMBO(combo)->entry), "activate",
-			GTK_SIGNAL_FUNC(ok_clicked), GTK_COMBO(combo)->entry);
-
-	hbox = gtk_hbox_new(TRUE, 10);
-	gtk_box_pack_start(GTK_BOX(vbox), hbox, FALSE, TRUE, 0);
-
-	button = gtk_button_new_with_label("OK");
-	GTK_WIDGET_SET_FLAGS(button, GTK_CAN_DEFAULT);
-	gtk_box_pack_start(GTK_BOX(hbox), button, TRUE, TRUE, 0);
-	gtk_window_set_default(GTK_WINDOW(choice_box), button);
-	gtk_signal_connect(GTK_OBJECT(button), "clicked",
-			GTK_SIGNAL_FUNC(ok_clicked), GTK_COMBO(combo)->entry);
-
-	button = gtk_button_new_with_label("Cancel");
-	GTK_WIDGET_SET_FLAGS(button, GTK_CAN_DEFAULT);
-	gtk_box_pack_start(GTK_BOX(hbox), button, TRUE, TRUE, 0);
-	gtk_signal_connect_object(GTK_OBJECT(button), "clicked",
-			GTK_SIGNAL_FUNC(gtk_widget_destroy),
-			GTK_OBJECT(choice_box));
-
-	gtk_combo_set_popdown_strings(GTK_COMBO(combo), wms);
-
-	if (wm_command)
-		gtk_entry_set_text(GTK_ENTRY(GTK_COMBO(combo)->entry),
-				wm_command);
-	
-	gtk_widget_show_all(choice_box);
-}
-
-static void load_wm_list(void)
-{
-	FILE	*file;
+	GList	*wms = NULL;
 	guchar 	*path;
-	guchar	buffer[BUFFER_SIZE];
+	GError  *error = NULL;
+	gchar	*data;
 
 	path = choices_find_path_load("WindowMans", "ROX-Session");
 	if (!path)
 		path = g_strconcat(app_dir, "/WindowMans", NULL);
 
-	file = fopen(path, "rb");
-	if (file)
-		while (1)
-		{
-			if (!fgets(buffer, BUFFER_SIZE, file))
-				break;
+	g_file_get_contents(path, &data, NULL, &error);
 
-			g_strstrip(buffer);
-			if (*buffer == '#' || *buffer == '\0')
-				continue;
-			wms = g_list_prepend(wms, g_strdup(buffer));
+	if (data)
+	{
+		gchar **lines;
+		int	i;
+
+		lines = g_strsplit(data, "\n", 0);
+
+		g_free(data);
+
+		for (i = 0; lines[i]; i++)
+		{
+			gchar *line = lines[i];
+			
+			if (line[0] && line[0] != '#')
+				wms = g_list_prepend(wms, g_strdup(line));
 		}
+
+		g_strfreev(lines);
+	}
 	else
-		g_warning("fopen(%s) failed: %s\n", path, g_strerror(errno));
+	{
+		report_error(_("Error loading window manager list '%s':\n%s"),
+				path, error->message);
+		g_error_free(error);
+	}
 
 	g_free(path);
 
-	wms = g_list_reverse(wms);
+	return g_list_reverse(wms);
 }
 
-static gint ok_clicked(GtkWidget *button, GtkEditable *entry)
+/* Run this default WM. When it dies, show the WM choices box again. */
+static void run_wm(void)
 {
-	guchar	*command, *path;
+	GError	*error = NULL;
+	gint	pid;
+	char	*argv[2];
 
-	command = gtk_editable_get_chars(entry, 0, -1);
-
-	path = choices_find_path_save("DefaultWM", "ROX-Session", TRUE);
-	if (path)
-	{
-		FILE	*file;
-
-		file = fopen(path, "wb");
-		if (file)
-		{
-			int len;
-			len = strlen(command);
-			if (fwrite(command, 1, strlen(command), file) < len)
-				g_warning("fwrite(%s) failed: %s\n",
-						path, g_strerror(errno));
-			if (fclose(file) == EOF)
-				g_warning("fclose(%s) failed: %s\n",
-						path, g_strerror(errno));
-		}
-
-		g_free(path);
-	}
-
-	gtk_widget_destroy(choice_box);
-	choice_box = NULL;
-
-	run_wm(command);
-
-	g_free(command);
-
-	return 1;
-}
-
-/* Run this command. When it dies, show the WM choices box again. */
-static void run_wm(guchar *command)
-{
 	g_return_if_fail(wm_pid == -1);
 
-	if (wm_command)
-		g_free(wm_command);
-	wm_command = g_strdup(command);
+	if (!*o_default_wm.value)
+	{
+		report_error(_("No window manager is currently selected.\n"
+			       "Please choose a window manager now."));
+		options_show();
+		return;
+	}
 
-	wm_pid = fork();
+	argv[0] = o_default_wm.value;
+	argv[1] = NULL;
+	g_spawn_async(NULL, argv, NULL,
+			G_SPAWN_SEARCH_PATH | G_SPAWN_DO_NOT_REAP_CHILD,
+			NULL, NULL, &pid, &error);
+		
+	if (error)
+	{
+		wm_pid = -1;
+
+		report_error("Failed to start window manager:\n%s\n"
+			"Please choose a new window manager and try again.",
+				error->message);
+
+		g_error_free(error);
+
+		options_show();
+	}
+	else
+		wm_pid = pid;
+}
+
+static void update_combo(Option *option)
+{
+	gtk_entry_set_text(GTK_ENTRY(option->widget), option->value);
+}
+
+static guchar *read_combo(Option *option)
+{
+	return gtk_editable_get_chars(GTK_EDITABLE(option->widget), 0, -1);
+}
+
+static GList *wm_combo(Option *option, xmlNode *node, guchar *label)
+{
+	GtkWidget	*combo, *entry;
+	GList		*wms;
+
+	g_return_val_if_fail(option != NULL, NULL);
+
+
+	combo = gtk_combo_new();
+	entry = GTK_COMBO(combo)->entry;
+	gtk_combo_disable_activate(GTK_COMBO(combo));
+	GTK_WIDGET_SET_FLAGS(entry, GTK_CAN_FOCUS);
+
+	wms = load_wm_list();
+	if (wms)
+	{
+		GList *next;
+		
+		gtk_combo_set_popdown_strings(GTK_COMBO(combo), wms);
+
+		for (next = wms; next; next = next->next)
+			g_free(next->data);
+		g_list_free(wms);
+	}
+
+	gtk_entry_set_text(GTK_ENTRY(entry), option->value);
+	gtk_widget_grab_focus(entry);
+
+	option->update_widget = update_combo;
+	option->read_widget = read_combo;
+	option->widget = entry;
+
+	gtk_signal_connect_object_after(GTK_OBJECT(entry), "changed",
+			GTK_SIGNAL_FUNC(option_check_widget),
+			(GtkObject *) option);
+
+	return g_list_append(NULL, combo);
+}
+
+static GList *start_wm_button(Option *option, xmlNode *node, guchar *label)
+{
+	GtkWidget *button, *align;
+
+	g_return_val_if_fail(option == NULL, NULL);
 	
-	if (wm_pid == -1)
-	{
-		g_warning("fork() failed: %s\n", g_strerror(errno));
-		choose_wm();
-	}
+	align = gtk_alignment_new(0.5, 0.5, 0, 0);
+	button = button_new_mixed(GTK_STOCK_YES, "Start window manager");
+	gtk_container_add(GTK_CONTAINER(align), button);
+	gtk_signal_connect(GTK_OBJECT(button), "clicked",
+			GTK_SIGNAL_FUNC(run_wm), NULL);
 
-	if (wm_pid == 0)
-	{
-		char *argv[2];
-
-		argv[0] = command;
-		argv[1] = NULL;
-
-		execvp(command, argv);
-
-		g_warning("execvp(%s) failed: %s\n", command,
-						g_strerror(errno));
-		_exit(1);
-	}
+	return g_list_append(NULL, align);
 }
