@@ -5,6 +5,11 @@
 TODO: Get sawfish's iconize animation to go into the middle of the screen
       so people stop blaming us for hiding the icons under the panel...
 
+03-Mar-2002
+~~~~~~~~~~~
+Put choice of window manager in the options box, instead of having its own
+system. The 'DefaultWM' file is no longer used.
+
 01-Mar-2002
 ~~~~~~~~~~~
 Changed over to Gtk+-2.0.
